--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,8 @@
     {{#each burgers}}
         {{#unless devoured}}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            <span><i class="fas fa-hamburger text-info"></i> {{burger_name}}</span>
+            <span><i class="fas fa-hamburger text-info"></i> {{name}}</span>
+            <input type="text" name="customer" data-id="{{id}}" class="customer">
             <button class="btn btn-info devour ml-auto" data-id="{{id}}">Devour it!</button>
         </li>
         {{/unless}}
@@ -35,7 +36,7 @@
             {{#if devoured}}
             <li class="list-group-item">
                 <i class="far fa-grin-tongue-squint text-danger"></i>
-                {{burger_name}}
+                {{name}} - {{customer.name}}
             </li>
             {{/if}}
         {{/each}}
