--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,14 +3,12 @@
     Burgers Availabe
   </div>
   <div class="card-body">
-    <form class="create-form" action="/api/burgers" method="POST">
-        <div class="input-group mb-3">
-            <input id="name" name="name" type="text" class="form-control" placeholder="Add a burger" aria-label="Name" aria-describedby="btn">
-            <div class="input-group-append">
-                <button class="btn btn-info" type="submit" id="btn">Add</button>
-            </div>
+    <div class="input-group mb-3">
+        <input id="burger-name" name="name" type="text" class="form-control" placeholder="Add a burger" aria-label="Name" aria-describedby="btnNewBurger">
+        <div class="input-group-append">
+            <button class="btn btn-info" id="btnNewBurger">Add</button>
         </div>
-    </form>
+    </div>
 
     <ul class="list-group list-group-flush">
     {{#each burgers}}
@@ -46,5 +44,24 @@
             {{/if}}
         {{/each}}
     </ul>
+  </div>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Warning</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="error-msg"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
